--- a/inui/index.html
+++ b/inui/index.html
@@ -75,7 +75,8 @@ example.appendChild(
 			content: h('ul', 
 				h('li', h('a', {href:'#accs'}, 'Accordions')),
 				h('li', h('a', {href:'#tabs'}, 'Tabs and sliders')),
-				h('li', h('a', {href:'http://google.com', target:'_blank'}, 'Google'))
+				h('li', h('a', {href:'http://google.com', target:'_blank'}, 'Google ↗')),
+				h('li', h('a', {href:'../'}, 'Home'))
 			)
 		}),
 
