--- a/wysi/index.html
+++ b/wysi/index.html
@@ -36,7 +36,7 @@
 
 	<label style="border: 1px solid #aaa"><input checked type="checkbox" id="toggleedit">edit mode</label> some non editable text ...
 	<h1>
-		<span class="text xs" contenteditable="true"><em>Wysi - a small HTML Editor</em></span>
+		<span class="text xs" contenteditable="true"><em>Wysi - a small and complete HTML Editor</em></span>
 	</h1> 
 	<div class="row">
 
