improved dropdownw + fixes

--- a/wysi/index.html
+++ b/wysi/index.html
@@ -45,7 +45,7 @@
 			<div class="text" contenteditable="true">
 				 links:
 				 <ul>
-					<li><a href="http://i.imgur.com/1hYsxO0.webm" target="lightbox">Some cat</a></li>
+					<li><a href="//i.imgur.com/1hYsxO0.webm" target="lightbox">Some <strong>cat</strong></a></li>
 					<li><a href="https://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1" target="lightbox">Random video</a></li>
 					<li><a href="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d17631799.05894624!2d2.6101320984213774!3d37.059784935734285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sfr!4v1465478950181" target="lightbox">A map</a></li>
 				</ul>
@@ -54,7 +54,7 @@
 			<div class="text" contenteditable="true">
 				<p><i class="fa fa-info-circle" style="color:gray;font-size: 1.2em"> </i> Try to use <kbd>Ctrl</kbd><kbd>Z</kbd>/<kbd>Ctrl</kbd><kbd>Shift</kbd><kbd>Z</kbd>/<kbd>Ctrl</kbd><kbd>Y</kbd> to undo <kbd onclick="document.execCommand('undo');event.stopPropagation()"><i class="fa fa-undo"></i></kbd>/redo <kbd onclick="document.execCommand('redo');event.stopPropagation()"><i class="fa fa-repeat"></i></kbd>, we removed those buttons to lighten the toolbar.
 				<p><i class="fa fa-info-circle" style="color:gray;font-size: 1.2em"> </i> Use <kbd>Shift</kbd><kbd>Enter</kbd> to insert a line return instead of a new block.
-				<p><i class="fa fa-info-circle" style="color:gray;font-size: 1.2em"> </i> Use <kbd>Shift</kbd><kbd>Delete</kbd> to delete links and images in suggest lists.
+				<p><i class="fa fa-info-circle" style="color:gray;font-size: 1.2em"> </i> Use <kbd>Shift</kbd><kbd>Delete</kbd> to delete links and images in suggestion lists.
 				<p><i class="fa fa-info-circle" style="color:gray;font-size: 1.2em"> </i> Double-click on image/table resizers to reset their width, and on links or image to edit them.
 				<p><i class="fa fa-info-circle" style="color:gray;font-size: 1.2em"> </i> You can scroll over the font-size dropdown (3rd toolbar button) on Chrome.
 				<p><i class="fa fa-chrome" style="color:green"> </i> <i class="fa fa-firefox" style="color:brown"> </i> <i class="fa fa-edge" style="color:blue"> </i>  Compatible
@@ -138,11 +138,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/mode/xml/xml.min.js"></script>
 <script src="//crossorigin.me/http://feather.aviary.com/imaging/v3/editor.js"></script>
-
-<!-- <script src="/node_modules/react/dist/react.js"></script>
+<!-- 
+<script src="/node_modules/react/dist/react.js"></script>
 <script src="/node_modules/react-dom/dist/react-dom.js"></script> -->
-<script src="https://fb.me/react-15.1.0.js"></script>
-<script src="https://fb.me/react-dom-15.1.0.js"></script>
+<script src="https://fb.me/react-15.2.1.js"></script>
+<script src="https://fb.me/react-dom-15.2.1.js"></script>
 
 
 <!-- 1.  -->
