--- a/wysi/index.html
+++ b/wysi/index.html
@@ -48,6 +48,7 @@
 					<li><a href="//i.imgur.com/1hYsxO0.webm" target="lightbox">Some <strong>cat</strong></a></li>
 					<li><a href="https://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1" target="lightbox">Random video</a></li>
 					<li><a href="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d17631799.05894624!2d2.6101320984213774!3d37.059784935734285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sfr!4v1465478950181" target="lightbox">A map</a></li>
+					<li><a href="https://www.google.com/maps/d/embed?mid=110DwvXLxK5o41iI4ssWKGjvFMjw" rel="" target="lightbox">Another map</a></li>
 				</ul>
 			</div>
 
