--- a/wysi/index.html
+++ b/wysi/index.html
@@ -175,7 +175,7 @@ document.addEventListener('focus', function(e){
 	wapp.setState({ce: e.target, cm:false, xs:e.target.matches('.xs')})
 }, true);
 
-// var sel = getSelection(), r=document.createRange();
+// var sel = getSelection(), r=new Range();
 // r.setStartAfter(document.querySelector('[contenteditable]').firstChild);
 // sel.setRange(r);
 // wapp.setState({aR:r, imgEdit:true, imgForm:{}})
