--- a/wysi/index.html
+++ b/wysi/index.html
@@ -129,6 +129,8 @@
 				</tr>
 				</table>
 			</div>
+			<div class="text" contenteditable="true"></div>
+			<div class="text" contenteditable="true" data-parse="false"></div>
 			
 		</main>
 		
