--- a/edit/index.html
+++ b/edit/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Page Editor</title>
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" crossorigin="anonymous" id="fontawesome">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/codemirror.min.css"/>
 	<link rel="stylesheet" type="text/css" href="../inui/style.css" scoped=".page">
 	<link rel="stylesheet" type="text/css" href="../wysi/text.css" scoped=".page">
 	<link rel="stylesheet" type="text/css" href="../wysi/style.css" scoped=".wysi">
 	<link rel="stylesheet" type="text/css" href="base.css">
-	<meta name="viewport" content="width=device-width">
+	
+	<script>
+		function load(o){
+			var s = document.createElement('script');
+			Object.assign(s, {async: true}, o);
+			document.head.appendChild(s);
+		}
+		load({
+			src:'https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/codemirror.min.js',
+			onload:()=>load({src:'https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/mode/xml/xml.min.js'})
+		});
+		load({src:'//crossorigin.me/http://feather.aviary.com/imaging/v3/editor.js'})
+	</script>
 </head>
 <body>
 
 <div id="cms-app"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/codemirror.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/mode/xml/xml.min.js"></script>
-<script src="//crossorigin.me/http://feather.aviary.com/imaging/v3/editor.js"></script>
 
-
-<script src="https://fb.me/react-15.3.0.js"></script>
-<script src="https://fb.me/react-dom-15.3.0.js"></script>
+<script src="https://npmcdn.com/react@15.3.1/dist/react.js"></script>
+<script src="https://npmcdn.com/react-dom@15.3.1/dist/react-dom.js"></script>
 <!-- <script src="/node_modules/react/dist/react.js"></script>
 <script src="/node_modules/react-dom/dist/react-dom.js"></script> -->
 
