--- a/edit/index.html
+++ b/edit/index.html
@@ -5,18 +5,20 @@
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" crossorigin="anonymous" id="fontawesome">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.15.2/codemirror.min.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../inui/style.css" scoped=".page">
 	<link rel="stylesheet" type="text/css" href="../wysi/text.css" scoped=".page">
 	<link rel="stylesheet" type="text/css" href="../wysi/style.css" scoped=".wysi">
 	<link rel="stylesheet" type="text/css" href="base.css">
+	
 </head>
 <body>
 
 <div id="cms-app"></div>
 
 
-<script src="https://npmcdn.com/react@15.3.1/dist/react.js"></script>
-<script src="https://npmcdn.com/react-dom@15.3.1/dist/react-dom.js"></script>
+<script src="https://unpkg.com/react@15.3.2/dist/react.min.js"></script>
+<script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.min.js"></script>
 <!-- <script src="/node_modules/react/dist/react.js"></script>
 <script src="/node_modules/react-dom/dist/react-dom.js"></script> -->
 
