--- a/inui/index.html
+++ b/inui/index.html
@@ -3,8 +3,12 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 	<meta name="viewport" content="width=device-width">
 	<style>
+		body {
+			font-family: 'Noto Sans';
+		}
 		main {margin: 1em;}
 		.dropdown {font-size: 1.2em;}
 		h2 {font-weight: 500;}
